added delete cart and logged user
